@@ -1,3 +1,12 @@
+2008-06-18  Jonathan Gonzalez V.  <zeus@gnu.org>
+
+	* compras.c (CheckDocumentData): Added a new way to find the
+	proper entry to check data. We check on all the entries on the wnd
+	passed using wnd parameter.
+
+	* utils.c (clean_container): Adde g_free and g_list_free to the
+	widget_name and list.
+
 2008-06-17  Jonathan Gonzalez V.  <zeus@gnu.org>
 
 	* compras.c (on_partial_cell_renderer_edited): Added function edit
